# airas-20251023-035154-matsuzawa

./: pyproject.toml
.github/workflows/: run_full_experiment_with_open_code_2.yml  run_trial_experiment_with_open_code_2.yml
.research/: research_history.json
.research/iteration1/: config.yaml  stderr.txt  stdout.txt
.research/iteration1/comparative-1-Two-Layer-MLP-1.2M-Fashion-MNIST/: config.yaml
.research/iteration1/proposed-Two-Layer-MLP-1.2M-Fashion-MNIST/: config.yaml
.research/iteration1/proposed-Two-Layer-MLP-1.2M-Fashion-MNIST/wandb/latest-run/files/: requirements.txt
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_dataset_0.txt
.research/prompt/summarize_paper_subgraph/: summarize_paper_0.txt
config/: config.yaml
config/run/: comparative-1-Two-Layer-MLP-1.2M-Fashion-MNIST.yaml  proposed-Two-Layer-MLP-1.2M-Fashion-MNIST.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
