[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boil-experiment"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "hydra-core>=1.3",
  "wandb>=0.15",
  "botorch>=0.8.5",
  "gpytorch>=1.11",
  "optuna>=3.4",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "scipy>=1.10"
]

[tool.setuptools.packages.find]
where = ["src"]
